Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -20,7 +20,14 @@
 
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
+<Blockquote>
+<STRONG>2012-10-01: The core GeneNetwork code is now being rewritten in Python 2.7 using the <A HREF="http://flask.pocoo.org/">Flask</A> framework and <A HREF="http://jinja.pocoo.org/docs/">Jinja2</A> HTML templating. Progress can be monitored on the GN (A HREF="https://github.com/genenetwork/genenetwork">GitHub</A> site. Our goal is to produce an much more extensible and modular version of GeneNetwork (GN2.0). GN2.0 will initially not have nearly as many features as GN1.0 but it will be used as the base for all new coding. We expect to port GN2.0 to Python 3.3+ late in 2013 or early 2014. (Implemented by Lei Yan, Zach Sloan, Sam Ockman, with advice from Christian Fernandez).
+</Blockquote>
 
+
+<Blockquote>
+<STRONG>2012-09-01: BXD Hypothalamic-Pituitary-Adrenal axis data sets </STRONG> have been completed and added to GeneNetwork. These data sets are accessible to all users without registration at two different levels of analysis--whole gene estimates of transcript expression, and single exon estimates of expression. The three primary data sets have now been error checked, and corrected. The hypothalamus data have been split by sex.  (Implemented by Khyobeni Mozhui, Adrienne Adler, Jesse Ingels, Arthur Centeno, Lu Lu, and Rob Williams).
+</Blockquote>
 
 <Blockquote>
 <STRONG>2012-07-20: BXD Pituitary gene expression data </STRONG> added to GeneNetwork. This is part of a systematic genetic analysis of the hypothalamic-pituitary-adrenal axis in the mouse (~5 strains). Data for hypothalamus and pituitary are complete and error checked. Data for the adrenals are still be error-checked. (Implemented by Khyobeni Mozhui, Adrienne Adler, Jesse Ingels, Arthur Centeno, Lu Lu, and Rob Williams).
