--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -20,8 +20,14 @@
 
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
+
 <Blockquote>
-<STRONG>2012-10-01: The core GeneNetwork code is now being rewritten in Python 2.7 </STRONG>using the <A HREF="http://flask.pocoo.org/">Flask</A> framework and <A HREF="http://jinja.pocoo.org/docs/">Jinja2</A> HTML templating. Progress can be monitored on the GN (A HREF="https://github.com/genenetwork/genenetwork">GitHub</A> site. Our goal is to produce an much more extensible and modular version of GeneNetwork (GN2.0). GN2.0 will initially not have nearly as many features as GN1.0 but it will be used as the base for all new coding. We expect to port GN2.0 to Python 3.3+ late in 2013 or early 2014. (Implemented by Lei Yan, Zach Sloan, Sam Ockman, with advice from Christian Fernandez).
+<STRONG>2012-11-08: First mappable RNA-seq data set in GeneNetwork </STRONG> for 29 genotypes of mice (BXD family) for whole brain RNA samples. We used a RiboMinus rather than polyA+ protocol. Approximately 15 million unique and aligned reads per sample were generated and used to compute the number of mRNAs (RPKM, normalized reads per per 1 kb of gene model per million tags). This data set summarizes values on a per GENE basis. We will be adding EXON level analysis in the next few weeks. To the best of our knowledge this is the first accessible and directly mappable RNA-seq data set available on the Internet.  (Implemented by Khyobeni Mozhui, Arthur Centeno, David Li, Lu Lu, William Taylor, and Xusheng Wang).
+</Blockquote>
+
+
+<Blockquote>
+<STRONG>2012-10-01: The core GeneNetwork code is now being rewritten in Python 2.7 </STRONG>using the <A HREF="http://flask.pocoo.org/">Flask</A> framework and <A HREF="http://jinja.pocoo.org/docs/">Jinja2</A> HTML templating. Progress can be monitored on the GN <A HREF="https://github.com/genenetwork/genenetwork">GitHub</A> site. Our goal is to produce an much more extensible and modular version of GeneNetwork (GN2.0). GN2.0 will initially not have nearly as many features as GN1.0 but it will be used as the base for all new coding. We expect to port GN2.0 to Python 3.3+ late in 2013 or early 2014. (Implemented by Lei Yan, Zach Sloan, Sam Ockman, with advice from Christian Fernandez).
 </Blockquote>
 
 
