Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/humanCross.html
+++ b/web/humanCross.html
@@ -32,7 +32,7 @@
 
 <Blockquote>
 
-<P><b>Please review and cite:</b> <A HREF="http://www.plosbiology.org/article/info%3Adoi%2F10.1371%2Fjournal.pbio.0060107">Mapping the genetic architecture of gene expression in human liver</A>. Eric E. Schadt, Cliona Molony, Eugene Chudin, Ke Hao, Xia Yang, Pek Y. Lum, Andrew Kasarskis, Bin Zhang, Susanna Wang, Christine Suver, Jun Zhu, Joshua Millstein, Solveig Sieberts, John Lamb, Debraj GuhaThakurta, Jonathan Derry, John D. Storey, Iliana Avila-Campillo, Mark J. Kruger, Jason M. Johnson, Carol A. Rohl, Atila van Nas, Margarete Mehrabian, Thomas A. Drake, Aldons J. Lusis, Ryan C. Smith, F. Peter Guengerich, Stephen C. Strom, Erin Schuetz, Thomas H. Rushmore, Roger Ulrich. PLoS Biol, 2008. 6(5): p. e107. PMID: <A HREF="http://www.plosbiology.org/article/info%3Adoi%2F10.1371%2Fjournal.pbio.0060107">18462017</a></p>
+<P><b>Please review and cite:</b> Schadt EE, Molony C, Chudin E, Hao K, Yang X, Lum PY, Kasarskis A, Zhang B, Wang S, Suver C, Zhu J, Millstein J, Sieberts S, Lamb J, GuhaThakurta D, Derry J, Storey JD, Avila-Campillo I, Kruger MJ, Johnson JM, Rohl CA, van Nas A, Mehrabian M, Drake TA, Lusis AJ, Smith RC, Guengerich FP, Strom SC, Schuetz E, Rushmore TH, Ulrich R (<A HREF="http://www.plosbiology.org/article/info%3Adoi%2F10.1371%2Fjournal.pbio.0060107">2008</A>) Mapping the genetic architecture of gene expression in human liver. PLoS Biology 6(5):e107. PMID: <A HREF="http://www.plosbiology.org/article/info%3Adoi%2F10.1371%2Fjournal.pbio.0060107">18462017</a></p>
 	
 <p><b>Systematic Genetic and Genomic Analysis of Cytochrome P450 Enzyme Activities in Human Liver</b>. Xia Yang, Bin Zhang, Cliona Molony, Eugene Chudin, Ke Hao, Jun Zhu, Christine Suver, Hua Zhong, F. Peter Guengerich, Stephen C. Strom, Erin Schuetz, Thomas H. Rushmore, Roger G. Ulrich, J. Greg Slatter, Eric E. Schadt, Andrew Kasarskis, Pek Yee Lum. Genome Res. 2010 Aug;20(8):1020-36.</p>
 
@@ -120,10 +120,13 @@ Please cite: Webster JA, Gibbs JR, Clarke J, Ray M, Zhang W, Holmans P, Rohrer K
 <P>Associated References:
 <OL>
 <LI>
-Adkins RM, Thomas F, Tylavsky FA, Krushkal J (<A HREF="http://www.biomedcentral.com/1471-2350/12/47" class="fs14" target="_blank">2011</A>) Parental ages and levels of DNA methylation in the newborn are correlated. BMC Med Genet. 2011 Mar 31;12:47.
+Adkins RM, Thomas F, Tylavsky FA, Krushkal J (<A HREF="http://www.biomedcentral.com/1471-2350/12/47" class="fs14" target="_blank">2011</A>) Parental ages and levels of DNA methylation in the newborn are correlated. BMC Med Genet. 12:47.
 
 <LI>
-Adkins RM, Krushkal J, Tylavsky FA, Thomas F (<A HREF="http://www.ncbi.nlm.nih.gov/pubmed/21308978" class="fs14" target="_blank">2011</A>) Racial differences in gene-specific DNA methylation levels are present at birth. Birth Defects Res A Clin Mol Teratol. 2011 Feb 9. doi: 10.1002/bdra.20770.
+Adkins RM, Krushkal J, Tylavsky FA, Thomas F (<A HREF="http://www.ncbi.nlm.nih.gov/pubmed/21308978" class="fs14" target="_blank">2011</A>) Racial differences in gene-specific DNA methylation levels are present at birth. Birth Defects Res A Clin Mol Teratol. 91:728-736
+
+<LI>
+Schroeder JW, Conneely KN, Cubells JC, Kilaru V, Newport DJ, Knight BT, Stowe ZN, Brennan PA, Krushkal J, Tylavsky FA, Taylor RN, Adkins RM, Smith AK (<A HREF="http://www.ncbi.nlm.nih.gov/pubmed/22139580" class="fs14" target="_blank">2011</A>) Neonatal DNA methylation patterns associate with gestational age. Epigenetics 6:1498-504.
 </OL>
 
 
