--- a/web/dbdoc/Striatum_Exon_1212.html
+++ b/web/dbdoc/Striatum_Exon_1212.html
@@ -3,7 +3,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <HTML>
 <HEAD>
-<TITLE>UTHSC Mouse BXD Whole Brain RNA Sequence Exon Level (Nov12) RPKM</TITLE>
+<TITLE>HQF Striatum Affy Mouse Exon 1.0ST Gene Level(Dec12) RMA</TITLE>
 
 <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
 <META NAME="keywords" CONTENT="genetics, bioinformatics, genome, phenome, gene expression, complex trait analysis, gene mapping, SNP, quantitative trait locus QTL, expression eQTL, WebQTL, Traitnet, Traitnetwork, personalized medicine">
@@ -115,9 +115,9 @@
 		<Table width= "100%" cellSpacing=0 cellPadding=5>
 		<TR>
 		
-	<P class="title">UTHSC Mouse BXD Whole Brain RNA Sequence Exon Level (Nov12) RPKM<A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A><BR><BR>
+	<P class="title">HQF Striatum Affy Mouse Exon 1.0ST Gene Level(Dec12) RMA<A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A><BR><BR>
 	
-	Accession number: <A HREF="/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=394">GN394</A></P>
+	Accession number: <A HREF="/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=399">GN399</A></P>
 	<br><br>
 	This page will be updated soon. 
 	<br><br>
