Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/faq.html
+++ b/web/faq.html
@@ -581,8 +581,9 @@ Strain means for these probe sets should in general be either high or low. When 
 <B>A22: </B>Phenotype trait names in GeneNetwork should have this general form when possible:
 
 <OL>
-<LI><B>Your description should start with very short list of "approved" general category and ontology terms</B>. These terms are used to subdivide the entire collection of phenotypes by system, organ, or level of analysis.  Some examples may help:  "Central nervous system", "Immune function", "Metabolism", "Development", or "Urogenital system". Capitalize the whole list as you would a standard English sentence. Separate terms by commas and then end the terms with a colon. For example,  "Central nervous system, pharmacology, endocrinology:"  is a valid set of three terms (note the use of . These terms do not really describe your trait, but are again used by you and other users to figure out how many traits there are in specific categories. 
-<BR><BR>Before making up your own terms, please review the current terms in GeneNetwork and find some ontology categories that look good to you. If you have questions contact one of use on the GeneNetwork development team.
+<LI><B>Your description should start with very short list of "approved" general category and ontology terms</B>. These terms are used to subdivide the entire collection of phenotypes by system, organ, or level of analysis.  Some examples may help:  "Central nervous system", "Immune system", "Metabolism", "Development", or "Urogenital system". Capitalize this list as you would a standard English sentence. Separate terms by commas and then end the terms with a colon. For example,  "Central nervous system, pharmacology, endocrinology:"  is a valid set of three terms. These terms do not really describe your trait, but are used by you and other users to figure out how many traits there are in specific categories. 
+
+<BR><BR>Before making up your own terms, please review the current terms in GeneNetwork and find some terms/ontology categories that look good to you. If you have questions contact one of us on the GeneNetwork development team.
 <BR>
 
 <LI>After the colon start with your description of the phenotype you have generated. For example: "Ethanol response..." or  "Anxiety assay...",   "Brain weight...".  The first letter should almost always be capitalized.
