Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -22,6 +22,11 @@
 
 
 <Blockquote>
+<STRONG>2013-01-08: Users can now chose the number of permutations that are used to estimate empirical P values for mapping results. We typically default to 2000 permutations, but if you need more precise estimates of P values it is possible to request up to 100,000 permutations. On a good day and without many other active users on GeneNetwork, the system can handle 1000 permutations per second. A histogram of the highest LRS scores for each of the many permutations is now displayed again in the Marker Regression output window.  (Implemented by Zach Sloan and Lei Yan).
+</Blockquote>
+
+
+<Blockquote>
 <STRONG>2012-11-08: First mappable RNA-seq data set in GeneNetwork </STRONG> for 29 genotypes of mice (BXD family) for whole brain RNA samples. We used a RiboMinus rather than polyA+ protocol. Approximately 15 million unique and aligned reads per sample were generated and used to compute the number of mRNAs (RPKM, normalized reads per per 1 kb of gene model per million tags). This data set summarizes values on a per GENE basis. We will be adding EXON level analysis in the next few weeks. To the best of our knowledge this is the first accessible and directly mappable RNA-seq data set available on the Internet.  (Implemented by Khyobeni Mozhui, Arthur Centeno, David Li, Lu Lu, William Taylor, and Xusheng Wang).
 </Blockquote>
 
