Committer: root <root@spring211.uthsc.edu>
 On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -22,7 +22,7 @@
 
 
 <Blockquote>
-<STRONG>2013-01-08: Users can now chose the number of permutations that are used to estimate empirical P values for mapping results. We typically default to 2000 permutations, but if you need more precise estimates of P values it is possible to request up to 100,000 permutations. On a good day and without many other active users on GeneNetwork, the system can handle 1000 permutations per second. A histogram of the highest LRS scores for each of the many permutations is now displayed again in the Marker Regression output window.  (Implemented by Zach Sloan and Lei Yan).
+<STRONG>2013-01-08: Users can now chose the number of permutations that are used to estimate empirical P values for mapping results. </STRONG>We typically default to 2000 permutations, but if you need more precise estimates of P values it is possible to request up to 100,000 permutations. On a good day and without many other active users on GeneNetwork, the system can handle 1000 permutations per second. A histogram of the highest LRS scores for each of the many permutations is now displayed again in the Marker Regression output window.  (Implemented by Zach Sloan and Lei Yan).
 </Blockquote>
 
 
