Committer: root <root@spring211.uthsc.edu>  On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -20,6 +20,14 @@
 
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
+<Blockquote>
+<STRONG>2013-04-13: DoD TATRC Retina Affy MoGene 2.0 ST Array (April 2013) RMA </STRONG> entered in GeneNetwork. This data set consists of 19 BXD strains, and DBA/2J parental strain. The data are now closed and not available for analysis.
+This is Robust Multi-array Average (RMA) expression data that has been normalized using what we call a 2z+8 scale, without special correction for batch effects. The data for each strain was computed as the mean of four samples per strain. Expression values on a log2 scale range from 6.252 to 18.07 (11.83 units), a range of approximately 3600-fold. After taking the log2 of the original non-logged expression estimates, we convert data within an array to a z score. We then multiply the z score by 2. Finally, we add 8 units to ensure that no values are negative. The result is a scale with a mean of 8 units and a standard deviation of 2 units. A two-fold difference in expression is equivalent roughly to 1 unit on this scale.  (Implemented by <a href="http://www.uthsc.edu/neuroscience/faculty/E_Geisert.php" target="_blank">Eldon E. Geisert</a> and Arthur Centeno).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2013-01-18: The Scripps Research Institute (TSRI) Dorsal Root Ganglia (DRG) Affy Mouse Genome 430 2.0 (Jan13) RMA Mouse Diversity Panel (MDP)</STRONG> entered into GeneNetwork. Currently this dataset is confidential, please contact <a href="http://sulab.org/" target="_blank">Andrew Su</a> for further information.  (Implemented by Andrew Su and Arthur Centeno).
+</Blockquote>
 
 <Blockquote>
 <STRONG>2013-01-08: Users can now chose the number of permutations that are used to estimate empirical P values for mapping results. </STRONG>We typically default to 2000 permutations, but if you need more precise estimates of P values it is possible to request up to 100,000 permutations. On a good day and without many other active users on GeneNetwork, the system can handle 1000 permutations per second. A histogram of the highest LRS scores for each of the many permutations is now displayed again in the Marker Regression output window.  (Implemented by Zach Sloan and Lei Yan).
