Committer: root <root@spring211.uthsc.edu>  On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -21,12 +21,34 @@
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
 <Blockquote>
+<STRONG>2013-07-10:</STRONG>
+We added a link from GeneNetwork to BNW (<a href="http://bnw.genenetwork.org/">Bayesian Network Web Server</a>) at GeneNetwork collection page.
+(Implemented by Lei Yan).
+</Blockquote>
+
+<Blockquote>
 <STRONG>2013-06-13: Whole-genome gene expression profiles of non-tumorous human lung tissues</STRONG> <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE23546" target="_blank">GEO Series GSE23546</a> entered into GeneNetwork. This SuperSeries is composed of the SubSeries: <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE23352" target=_blank>GSE23352</a> (Laval set: 499 samples), <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE23529" target=_blank>GSE23529</a> (UBC set: 405 samples), <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE23545" target=_blank>GSE23545</a> (GRNG set: 445 samples), please contact <a href="http://www2.ulaval.ca/fileadmin/ulaval_ca/Images/recherche/bd/chercheur/fiche/1119674.html" target="_blank">Yohan Bossé</a> or <a href="http://www.plosgenetics.org/article/authors/info%3Adoi%2F10.1371%2Fjournal.pgen.1003029;jsessionid=9A284831F5FD117219AB879A23EF4A96" target=_blank>Ke Hao</a> for further information. Platform used: <a href="http://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GPL10379" target=_blank>GPL10379</a> Rosetta/Merck Human RSTA Custom Affymetrix 2.0 microarray. (Implemented by Yohan Bossé, Ke Hao and Arthur Centeno).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2013-06-04:</STRONG>
+When editing gene aliases, aliases can be split by comma, semicolon, vertical bar, space, line break. And then they all will be converted to semicolon (NCBI style).
+(Implemented by Lei Yan).
 </Blockquote>
 
 <Blockquote>
 <STRONG>2013-04-13: DoD TATRC Retina Affy MoGene 2.0 ST Array (April 2013) RMA </STRONG> entered in GeneNetwork. This data set consists of 19 BXD strains, and DBA/2J parental strain. The data are now closed and not available for analysis.
 This is Robust Multi-array Average (RMA) expression data that has been normalized using what we call a 2z+8 scale, without special correction for batch effects. The data for each strain was computed as the mean of four samples per strain. Expression values on a log2 scale range from 6.252 to 18.07 (11.83 units), a range of approximately 3600-fold. After taking the log2 of the original non-logged expression estimates, we convert data within an array to a z score. We then multiply the z score by 2. Finally, we add 8 units to ensure that no values are negative. The result is a scale with a mean of 8 units and a standard deviation of 2 units. A two-fold difference in expression is equivalent roughly to 1 unit on this scale.  (Implemented by <a href="http://www.uthsc.edu/neuroscience/faculty/E_Geisert.php" target="_blank">Eldon E. Geisert</a> and Arthur Centeno).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2013-04-06: PLINK procedure upgraded:</STRONG>
+The PLINK calculation procedure was upgraded, so now the mapping time with PLINK is reduced to less than half. For Human CANDLE data, it took about 400+ seconds before, now it will take no more than 200 seconds. (Implemented by Lei Yan).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2013-03-21: <a href="http://ucscbrowserbeta.genenetwork.org/">New GeneNetwork UCSC Genome Browser mirror:</a></STRONG>
+We have installed a second GeneNetwork UCSC Genome Browser mirror site that supports mm10 and mm9. And we loaded DBA/2J Sequence and Structural Variants and C57BL6/NJ Sequence and Structural Variants for mm10. (Implemented by Lei Yan and Ashutosh Pandey).
 </Blockquote>
 
 <Blockquote>
