Committer: root <root@spring211.uthsc.edu>  On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -21,6 +21,13 @@
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
 <Blockquote>
+<STRONG>2013-07-26:</STRONG>
+Search for Gene Ontology (for example, GO:0045202) is working.
+And we are still working on the improvement for author search and GO search.
+(Implemented by Lei Yan).
+</Blockquote>
+
+<Blockquote>
 <STRONG>2013-07-11:</STRONG>
 Several features have been implemented or are currently being implemented for GeneNetwork 2:<br>
 <ul>
@@ -1461,4 +1468,3 @@ urchinTracker();
 </script>
 </BODY>
 </HTML>
-
