Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -21,9 +21,9 @@
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
 <Blockquote>
-<STRONG>2013-07-26:</STRONG>
-Search for Gene Ontology (for example, GO:0045202) is working.
-And we are still working on the improvement for author search and GO search.
+<STRONG>2013-08-06:</STRONG>
+Search for Gene Ontology (for example, GO:0045202) and author (for example, name=lu inst=Tennessee) are working.
+And we changed the search terms from underline type to italic type.
 (Implemented by Lei Yan).
 </Blockquote>
 
