Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -331,6 +331,8 @@ Talishinsky A, Rosen GD (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22675444" targ
 <LI>
 Williams RW, Mulligan MK (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23195314" target="_blank" class="fwn">2012</A>) Genetic and molecular network analysis of behavior. Int Rev Neurobiol. 104:135-57
 <LI>
+Wolen AR, Phillips CA, Langston MA, Vorster PJ, Bruce NA, York TP, Williams RW, Miles MF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22511924" target="_blank" class="fwn">2012</A>) Genetic dissection of acute ethanol responsive gene networks in prefrontal cortex: Functional and mechanistic implications. PLoS One 7:e33575
+<LI>
 Yin L, Unger EL, Jellen LC, Earley CJ, Allen RP, Tomaszewicz A, Fleet JC, Jones BC. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/22461179" target="_blank" class="fwn">2012</A>) Systems genetic analysis of multivariate response to iron deficiency in mice. Am J Physiol Regul Integr Comp Physiol 302(11):R1282-96
 <SMALL><A HREF="/images/upload/Yin_Jones_2012.pdf" target="_blank" class="fwn">PDF version</A>
 </SMALL>
