Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -21,10 +21,32 @@
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
 
 <Blockquote>
+<STRONG>2013-08-29:</STRONG>
+<B>GeneNetwork 10-year anniversary.</B> We now have a decade of expression data in GeneNetwork (first mRNA data is a BXD Whole Brain U74Av2 Aug03). Here are some current statistics:
+<OL>
+
+<LI> 437 expression data sets for all species. Many of these are "variants on a theme" such as Male, Female, Combined, or PDNN, RMA, MAS5 transformations. 
+
+<LI>240 expression data sets for the BXD family of mice The redundancy rate is probably about 3x (three versions of every primary data set). 
+
+<LI>13.7 million mRNA traits. Again, figure about 3x redundancy. That is ~4 million molecular assays across the family.
+
+<LI>685 million mRNA strain-phenotype values for the BXD family. That means that we 50 strains on average per trait (685/13.7). For most of these we also have standard error terms, so we have over a billion data points for the BXD family. 
+</OL>
+</Blockquote>
+
+
+<Blockquote>
 <STRONG>2013-08-06:</STRONG>
-Search for Gene Ontology (for example, GO:0045202) and author (for example, name=lu inst=Tennessee) are working.
-And we changed the search terms from underline type to italic type.
-(Implemented by Lei Yan).
+<B>SEARCH FOR GENES BY AUTHOR</B>. You can now search gene expression data sets using an author query. The search is not perfect yet, but try these queries in the search boxes:
+<OL>
+<LI>NAME=(Watson JD)
+<LI>NAME=(Snyder) will work but NAME=(Snyder M) does not yet work
+<LI>NAME=(Synder) is a typo, and will not work 
+<LI>NAME=(Williams LU) is interpreted as two different authors (RW Williams and L Lu in this case).
+</OL>
+
+We plan to refine this type of query and to add a query for Institutions (INST=Yale). (Implemented by Lei Yan).
 </Blockquote>
 
 <Blockquote>
