Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/header.html
+++ b/web/header.html
@@ -8,7 +8,7 @@
 				</a>
 			</TD>
 			<TD valign="bottom">
-				<A HREF="http://www.touchgraph.com/TGGoogleBrowser.php?start=genenetwork.org&signed=false" target="_blank">
+				<A HREF="http://bnw.genenetwork.org/BNW/sourcecodes/home.php" target="_blank">
 					<IMG SRC="/images/upload/NetworkLogo.png" width="101" height="73" border="0">
 				</a>
 			</td>
