--- a/web/footer.html
+++ b/web/footer.html
@@ -10,7 +10,7 @@ This site is currently operated by
 		<A class="smallsize" HREF="mailto:rwilliams@uthsc.edu">Rob Williams</A>,
 		<A class="smallsize" HREF="mailto:lyan6@uthsc.edu">Lei Yan</A>,
 		<A class="smallsize" HREF="mailto:zachary.a.sloan@gmail.com">Zachary Sloan</A>,
-		<A class="smallsize" HREF="mailto:acenteno@uthsc.edu" target="_blank">Arthur Centeno</A>. Design and code by Sam Ockman, Xiaodong Zhou, Christian Fernandez, Ning Liu, Rudi Alberts, Elissa Chesler, Jintao Wang, Kenneth Manly, Robert W. Williams, and <A class="smallsize" HREF="/credit.html">colleagues</A>.
+		<A class="smallsize" HREF="mailto:acenteno@uthsc.edu" target="_blank">Arthur Centeno</A>. Design and code by Sam Ockman, Xiaodong Zhou, Christian Fernandez, Ning Liu, Rudi Alberts, Elissa Chesler, Jintao Wang, Kenneth Manly, Alexander G. Williams, Robert W. Williams, and <A class="smallsize" HREF="/credit.html">colleagues</A>.
 
 
 	</TD>
@@ -31,9 +31,11 @@ This site is currently operated by
 		GeneNetwork support from:
 		<UL>
 		<LI><a class="smallsize" target="_blank" href="http://citg.uthsc.edu">The UT Center for Integrative and Translational Genomics</A>
-		<LI><a class="smallsize" target="_blank" href="http://www.iniastress.org">NIAAA</A> Integrative Neuroscience Initiative on Alcoholism (U01 AA016662, U01 AA013499, U24 AA013513, U01 AA014425)
-		<LI><a class="smallsize" target="_blank" href="http://www.drugabuse.gov/about/organization/Genetics/geneexpression/index.html">NIDA</A>, <a class="smallsize" target="_blank" href="http://www.nimh.nih.gov/">NIMH</A>, and <a class="smallsize" target="_blank" href="http://www.niaaa.nih.gov/">NIAAA</A> (P20-DA 21131)
-		<LI>NCI <a class="smallsize" target="_blank" href="http://emice.nci.nih.gov/">MMHCC</A> (U01CA105417), <a class="smallsize" target="_blank" href="http://www.ncrr.nih.gov/">NCRR</A> <a class="smallsize" target="_blank" href="http://www.nbirn.net/TestBeds/Mouse/index.htm">BIRN</A>,  (U24 RR021760)
+		<LI><a class="smallsize" target="_blank" href="http://www.iniastress.org">NIAAA</A> Integrative Neuroscience Initiative on Alcoholism (U01 AA016662, U01 AA013499, U24 AA013513, U01 AA014425, 2006-2016)
+		<LI><a class="smallsize" target="_blank" href="http://www.nia.nih.gov">NIA</A> (R01AG043930, 2013-2018)
+
+<LI><a class="smallsize" target="_blank" href="http://www.drugabuse.gov">NIDA</A>, <a class="smallsize" target="_blank" href="http://www.nimh.nih.gov/">NIMH</A>, and <a class="smallsize" target="_blank" href="http://www.niaaa.nih.gov/">NIAAA</A> (P20-DA 21131, 2001-2012)
+		<LI>NCI <a class="smallsize" target="_blank" href="http://emice.nci.nih.gov/">MMHCC</A> (U01CA105417), NCRR, <a class="smallsize" target="_blank" href="http://www.birncommunity.org">BIRN</A>, (U24 RR021760)
 		</UL>
 	</TD>
 </TR>
