Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/tutorial/ppt/index.html
+++ b/web/tutorial/ppt/index.html
@@ -21,7 +21,7 @@
 		<blockquote>
 			<P class="subtitle">GeneNetwork Demonstration Part I </P>
 
-<P>Part I: A short introduction on <B>how to exploit GeneNetwork to explore variation and covariation among traits</B>. This 18-slide PowerPoint side show uses the beta amyloid precursor as an example.
+<P>Part I: A short introduction on <i>how to exploit GeneNetwork to explore variation and covariation among traits</i>. This 18-slide PowerPoint side show uses the beta amyloid precursor as an example.
 
 			<blockquote>
 				<UL>
@@ -31,7 +31,7 @@
 			</blockquote>
 			<P class="subtitle">WebQTL Demonstration Part II </P>
 
-<P>Part II: <B>A continutation that explains <B>how to map chromosomal locations (QTLs) that modulate variation in quantitative traits using the WebQTL mapping module of the GeneNetwork.</B>
+<P>Part II: A continuation that explains <i>how to map chromosomal locations (QTLs) that modulate variation in quantitative traits using the WebQTL mapping module of the GeneNetwork.</i>
 
 
 
@@ -54,7 +54,7 @@
 
 
 <P>
-<P>Files last updated by RWW, July 19, 2012.
+<P>Files last updated by AC, Oct 25, 2013.
 
 
 
