Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -223,6 +223,12 @@ Zhang B, Schmoyer D, Kirov S, Snoddy J (<a href="http://www.pubmedcentral.nih.go
 <OL>
 
 <LI>
+Farris SP, Miles MF (<A HREF="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0082435" target="_blank" class="fwn">2013</A>) Fyn-dependent gene networks in acute ethanol sensitivity. PLoS One, in press 
+
+<LI>
+Harenza JL, Muldoon PP, Biasi MD, Imad Damaj M, Miles MF (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24289814" target="_blank" class="fwn">2013</A>) Genetic variation within the Chrna7 gene modulates nicotine reward-like phenotypes in mice. Genes, Brain & Behavior in press 
+
+<LI>
 Houtkooper RH, Mouchiroud L, Ryu D, Moullan N, Katsyuba E, Knott G,  Williams RW,  Auwerx J (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23698443" target="_blank" class="fwn">2013</A>) Mitonuclear protein imbalance as a conserved longevity mechanism. Nature 497:451-457  <A HREF="http://www.biomedcentral.com/content/pdf/1471-2164-12-610.pdf" target="_blank" class="fwn">PDF version</A>
 <LI>
 Huang Y, Wang L, Bennett B, Williams RW, Wang YJ, Gu WK, Jiao Y (<A HREF="https://ncbi.nlm.nih.gov/pubmed/24085430" target="_blank" class="fwn">2013</A>) Potential role of Atp5g3 in epigenetic regulation of alcohol preference or obesity from a mouse genomic perspective. Genet Mol Res 12:3662-3674
@@ -235,7 +241,7 @@ Jones BC, Miller DB, O'Callaghan JP, Lu L, Unger EL, Alam G, Williams RW (<A HRE
 <LI>
 Liebe R, Hall RA, Williams RW, Dooley S, Lammert F (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23943854" target="_blank" class="fwn">2013</A>) Systems genetics of hepatocellular damage in vivo and in vitro: identification of a critical network on chromosome 11 in mouse. Physiological Genomics 45:931-939
 <LI>
-Mulligan MK, Dubose C, Yue J, Miles MF, Lu L, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23847651" target="_blank" class="fwn">2013</A>) Expression, covariation, and genetic regulation of miRNA Biogenesis genes in brain supports their role in addiction, psychiatric disorders, and disease. Frontiers in Genetics 4:126
+Mulligan MK, Dubose C, Yue J, Miles MF, Lu L, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23847651" target="_blank" class="fwn">2013</A>) Expression, covariation, and genetic regulation of miRNA biogenesis genes in brain supports their role in addiction, psychiatric disorders, and disease. Frontiers in Genetics 4:126
 <LI>
 Swaminathan S, Lu H, Williams RW, Lu L, Jablonski MM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23582180" target="_blank" class="fwn">2013</A>) Genetic modulation of the iris transillumination defect: a systems genetics analysis using the expanded family of BXD glaucoma strains. Pigment Cell Melanoma Research, in press
 <LI>
