Committer: root <root@spring211.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -241,6 +241,9 @@ Jones BC, Miller DB, O'Callaghan JP, Lu L, Unger EL, Alam G, Williams RW (<A HRE
 <LI>
 Liebe R, Hall RA, Williams RW, Dooley S, Lammert F (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23943854" target="_blank" class="fwn">2013</A>) Systems genetics of hepatocellular damage in vivo and in vitro: identification of a critical network on chromosome 11 in mouse. Physiological Genomics 45:931-939
 <LI>
+Lindblom RP, Aeinehband S, Parso R, Strom M, Al Nimer F, Zhang XM, Domingues CA, Flytzani S, Siez M, Piehl F  (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23558233" target="_blank" class="fwn">2013</A>)  Genetic variability in the rat Aplec C-type lectin gene cluster regulates lymphocyte trafficking and motor neuron survival after traumatic nerve root injury. Journal of Neuroinflammatio 1o:60 
+
+<LI>
 Mulligan MK, Dubose C, Yue J, Miles MF, Lu L, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23847651" target="_blank" class="fwn">2013</A>) Expression, covariation, and genetic regulation of miRNA biogenesis genes in brain supports their role in addiction, psychiatric disorders, and disease. Frontiers in Genetics 4:126
 <LI>
 Swaminathan S, Lu H, Williams RW, Lu L, Jablonski MM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23582180" target="_blank" class="fwn">2013</A>) Genetic modulation of the iris transillumination defect: a systems genetics analysis using the expanded family of BXD glaucoma strains. Pigment Cell Melanoma Research, in press
